# TinyVolumeRenderer

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  HELPME.md  README.md  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  main.cpp  opengl.cpp  opengl.hpp  quad.cpp  quad.hpp  quad_vshader.glsl  reader.cpp  reader.hpp  texture.cpp  texture.hpp  trackball.cpp  trackball.hpp  viewer.cpp  viewer.hpp  volume_object.cpp  volume_object.hpp
cmake/: FindTBB.cmake  common.cmake
cmake/config-site/: WUs-MacBook-Air.local.cmake  hastur.sci.utah.edu.cmake  lagodelcielo.cmake  qwu-ThinkPad-T430s.cmake
data/: bonsai.json  csafe_heptane.json  neghip.json  tooth.json
projects/ospray/: CMakeLists.txt  README.md  callback.cpp  callback.h  camera.h  common.h  framebuffer.h  global.cpp  global.h  main.cpp  trackball.h  volume.cpp  volume.h  widget.cpp  widget.h
projects/ospray/common/: camera.h  common.h  framebuffer.h  trackball.h  transferfunction.cpp  transferfunction.h  volume.cpp  volume.h
projects/raycast/: README.md  camera.cpp  camera.hpp  comm.hpp  framebuffer.cpp  framebuffer.hpp  glob.cpp  glob.hpp  main.cpp  screen_object.cpp  texture_reader.cpp  texture_reader.hpp  trackball.hpp  volume_object.cpp  volume_object.hpp
projects/raycast/shaders/: fshader_raycast.glsl  fshader_slice.glsl  vshader_quad.glsl  vshader_raycast.glsl
projects/reader/: CMakeLists.txt  CMakeLists.txt~  volume_reader.cpp  volume_reader.cpp~  volume_reader.hpp  volume_reader.hpp~
projects/slice/: CMakeLists.txt  README.md  camera.cpp  camera.hpp  comm.cpp  comm.hpp  composer_object.cpp  composer_object.hpp  debug_object.cpp  debug_object.hpp  framebuffer.cpp  framebuffer.hpp  fshader.glsl  fshader_box.glsl  fshader_quad.glsl  glob.cpp  glob.hpp  intersection.cpp  intersection.hpp  main.cpp  screen_object.cpp  screen_object.hpp  texture.cpp  texture.hpp  texture_reader.cpp  texture_reader.hpp  trackball.cpp  trackball.hpp  volume_object.cpp  volume_object.hpp  vshader.glsl  vshader_box.glsl  vshader_slice.glsl
projects/slice/shaders/: fshader_box.glsl  fshader_quad.glsl  fshader_slice.glsl  vshader_box.glsl  vshader_slice.glsl
renderer/: raycast_fshader.glsl  volume_object.cpp
shaders/: fshader_quad.glsl
